# self_learning_platform

./: .env_example  .gitignore  README.md  pyproject.toml
app_material/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
app_material/migrations/: 0001_initial.py  0002_alter_subscription_section.py  0003_alter_material_owner_alter_section_owner_and_more.py  0004_material_slug_section_slug.py
app_material/tests/: tests_material.py  tests_section.py
app_test/: admin.py  models.py  serializers.py  servises.py  urls.py  views.py
app_test/migrations/: 0001_initial.py  0002_alter_test_linked_material_alter_test_name_and_more.py  0003_answer_owner.py  0004_testtry_points_quantity.py  0005_answer_number.py
app_test/tests/: tests_answer.py  tests_question.py  tests_test.py  tests_test_try.py
app_user/: Serializers.py  models.py  permissions.py  urls.py  views.py
app_user/migrations/: 0001_initial.py  0002_alter_user_telegram_nik.py  0003_user_is_teacher.py
config/: settings.py  urls.py
fixtures/: groups.json
